<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">N64DroidPad</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- options -->
    <string name="vibration_title">Vibration Strength</string>
    <string name="vibration_summary">Select Vibration Strength</string>
    <string name="vibration_option">Enable/Disable Vibration</string>
    <string name="pad_option">Enable/Disable Pad</string>
    <string name="joystick_option">Enable/Disable Joysctick</string>

</resources>